# ChannelProject

./: CMakeLists.txt  IChannel.h  README.md  Token.txt  buffered_channel.h  main.cpp  pipeline_manager.h  tests.cpp
